---
title: Class Diagram - Employee Service
---
classDiagram
    %% Entity
    class Employee {
        -Long id
        -Long userId
        -String employeeId
        -String firstName
        -String lastName
        -String email
        -String phone
        -String address
        -String department
        -String position
        -LocalDate joinDate
        -BigDecimal salary
        -LocalDateTime createdAt
        -LocalDateTime updatedAt
        -validateSalary() void
        +onCreate() void
        +onUpdate() void
    }
    
    %% DTOs
    class EmployeeRequest {
        -String firstName
        -String lastName
        -String email
        -String phone
        -String address
        -String department
        -String position
        -LocalDate joinDate
        -BigDecimal salary
        -Long userId
    }
    
    class EmployeeResponse {
        -Long id
        -String employeeId
        -String firstName
        -String lastName
        -String email
        -String phone
        -String address
        -String department
        -String position
        -LocalDate joinDate
        -BigDecimal salary
        -LocalDateTime createdAt
    }
    
    %% Repository
    class EmployeeRepository {
        <<interface>>
        +findById(Long id) Optional~Employee~
        +findByUserId(Long userId) Optional~Employee~
        +findAll(Pageable pageable) Page~Employee~
        +existsByEmail(String email) boolean
        +save(Employee employee) Employee
        +deleteById(Long id) void
    }
    
    %% Service
    class EmployeeService {
        -EmployeeRepository employeeRepository
        -EmployeeMapper employeeMapper
        +createEmployee(EmployeeRequest request) EmployeeResponse
        +getAllEmployees(Pageable pageable) Page~EmployeeResponse~
        +getEmployeeById(Long id) EmployeeResponse
        +getEmployeeByUserId(Long userId) EmployeeResponse
        +updateEmployee(Long id, EmployeeRequest request) EmployeeResponse
        +deleteEmployee(Long id) void
    }
    
    %% Controller
    class EmployeeController {
        -EmployeeService employeeService
        +createEmployee(EmployeeRequest request) ResponseEntity~EmployeeResponse~
        +getAllEmployees(Pageable pageable) ResponseEntity~Page~
        +getEmployeeById(Long id) ResponseEntity~EmployeeResponse~
        +getEmployeeByUserId(Long userId) ResponseEntity~EmployeeResponse~
        +updateEmployee(Long id, EmployeeRequest request) ResponseEntity~EmployeeResponse~
        +deleteEmployee(Long id) ResponseEntity~Void~
    }
    
    %% Mapper
    class EmployeeMapper {
        <<interface>>
        +toEntity(EmployeeRequest request) Employee
        +toResponse(Employee employee) EmployeeResponse
        +updateEntityFromRequest(EmployeeRequest request, Employee employee) void
    }
    
    %% Security Components
    class JwtAuthenticationFilter {
        -JwtUtil jwtUtil
        +doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain chain) void
    }
    
    class AdminOnly {
        <<annotation>>
    }
    
    class SecurityAspect {
        +checkAdminAccess(JoinPoint joinPoint) void
    }
    
    %% Relationships
    EmployeeService --> EmployeeRepository : uses
    EmployeeService --> EmployeeMapper : uses
    EmployeeController --> EmployeeService : uses
    EmployeeController --> EmployeeRequest : receives
    EmployeeController --> EmployeeResponse : returns
    EmployeeRepository --> Employee : manages
    EmployeeMapper --> Employee : maps to/from
    EmployeeMapper --> EmployeeRequest : maps from
    EmployeeMapper --> EmployeeResponse : maps to
    EmployeeController --> AdminOnly : annotated with
    SecurityAspect --> AdminOnly : processes
